import notice of intent table

--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -185,7 +185,7 @@
   <div class="section" *ngIf="enableCertificateOfTitleUpload">
     <label for="certificate-of-title-upload">Upload Certificate of Title</label>
     <div class="subtext">
-      Visit <a href="https://ltsa.ca/property-owners/how-can-i/search-for-a-title/">BC Land Title & Survey</a> to obtain
+      Visit <a href="https://ltsa.ca/property-owners/how-can-i/search-for-a-title/" target="_blank">BC Land Title & Survey</a> to obtain
       a recent copy (not older than 1 year) of the Certificate of Title
     </div>
     <app-file-drag-drop
