--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -186,7 +186,9 @@
     <label for="certificate-of-title-upload">Upload Certificate of Title</label>
     <div class="subtext">
       Visit
-      <a class="subtext" href="https://ltsa.ca/property-owners/how-can-i/search-for-a-title/">BC Land Title & Survey</a>
+      <a class="subtext" href="https://ltsa.ca/property-owners/how-can-i/search-for-a-title/" target="_blank"
+        >BC Land Title & Survey</a
+      >
       to obtain a recent copy (not older than 1 year) of the Certificate of Title
     </div>
     <app-file-drag-drop
