--- a/alcs-frontend/src/app/features/notification/intake/intake.component.html
+++ b/alcs-frontend/src/app/features/notification/intake/intake.component.html
@@ -10,7 +10,7 @@
   </div>
   <div>
     <div class="subheading2 left">
-      ALC Auto-email Response
+      ALC Auto-Email Response
       <mat-icon
         class="icon"
         matTooltip='Portal status updated to "ALC Response Sent" when auto-email is successfully sent.'
