--- a/alcs-frontend/src/app/features/notification/intake/intake.component.scss
+++ b/alcs-frontend/src/app/features/notification/intake/intake.component.scss
@@ -38,3 +38,13 @@
 .left {
   margin-top: 3px;
 }
+
+:host::ng-deep {
+  .editing {
+    width: 100%;
+  }
+
+  .mat-mdc-form-field {
+    width: 100%;
+  }
+}
