--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -8,13 +8,12 @@
     {{ applicationSubmission.purpose }}
   </div>
   <div class="subheading2 grid-1">
-    Could this proposal be accommodated on lands outside of the ALR? Please justify why the proposal cannot be carried
-    out on lands outside the ALR.
+    Could this proposal be accommodated on lands outside of the ALR?
   </div>
   <div class="grid-double">
     {{ applicationSubmission.nfuOutsideLands }}
   </div>
-  <div class="subheading2 grid-1">Does the proposal support agriculture in the short or long term? Please explain</div>
+  <div class="subheading2 grid-1">Does the proposal support agriculture in the short or long term?</div>
   <div class="grid-double">
     {{ applicationSubmission.nfuAgricultureSupport }}
   </div>
@@ -27,8 +26,7 @@
     </div>
   </div>
   <div class="subheading2 grid-1">
-    Do you need to import any fill to construct or conduct the proposed Non-farm use? Fill is any material brought onto
-    the property, including gravel for construction.
+    Do you need to import any fill to construct or conduct the proposed non-farm use?
   </div>
   <div class="grid-double">
     <span *ngIf="applicationSubmission.nfuWillImportFill !== null">{{
