--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/subd-details/subd-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/subd-details/subd-details.component.html
@@ -24,7 +24,7 @@
   <div class="grid-double">
     {{ _applicationSubmission.subdSuitability }}
   </div>
-  <div class="subheading2 grid-1">Does the proposal support agriculture in the short or long term? Please explain.</div>
+  <div class="subheading2 grid-1">Does the proposal support agriculture in the short or long term?</div>
   <div class="grid-double">
     {{ _applicationSubmission.subdAgricultureSupport }}
   </div>
