--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.html
@@ -69,19 +69,19 @@
       <h4>Land Use of Parcel(s) under Notice of Intent</h4>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
+      Describe all agriculture that currently takes place on the parcel(s).
     </div>
     <div class="grid-double">
       {{ submission.parcelsAgricultureDescription }}
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe in detail all agricultural improvements made to the parcel(s).
+      Describe all agricultural improvements made to the parcel(s).
     </div>
     <div class="grid-double">
       {{ submission.parcelsAgricultureImprovementDescription }}
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe all non-agricultural uses that currently take place on the parcel(s).
+      Describe all other uses that currently take place on the parcel(s).
     </div>
     <div class="grid-double">
       {{ submission.parcelsNonAgricultureUseDescription }}
