--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.html
@@ -127,7 +127,7 @@
       <h4>Land Use of Parcel(s) under Application</h4>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
+      Describe all agriculture that currently takes place on the parcel(s).
       <app-updated-banner *ngIf="updatedFields.includes('parcelsAgricultureDescription')"></app-updated-banner>
     </div>
     <div class="grid-double">
@@ -138,7 +138,7 @@
       ></app-no-data>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe in detail all agricultural improvements made to the parcel(s).
+      Describe all agricultural improvements made to the parcel(s).
       <app-updated-banner
         *ngIf="updatedFields.includes('parcelsAgricultureImprovementDescription')"
       ></app-updated-banner>
@@ -151,7 +151,7 @@
       ></app-no-data>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe all non-agricultural uses that currently take place on the parcel(s).
+      Describe all other uses that currently take place on the parcel(s).
       <app-updated-banner *ngIf="updatedFields.includes('parcelsNonAgricultureUseDescription')"></app-updated-banner>
     </div>
     <div class="grid-double">
