--- a/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
@@ -175,8 +175,7 @@
   </div>
 
   <div class="subheading2 grid-1">
-    Do you need to import any fill to construct or conduct the proposed Non-farm use? Fill is any material brought onto
-    the property, including gravel for construction.
+    Do you need to import any fill to construct or conduct the proposed non-adhering residential use?
     <app-updated-banner *ngIf="updatedFields.includes('naruWillImportFill')"></app-updated-banner>
   </div>
   <div class="grid-double">
