--- a/portal-frontend/src/app/features/applications/application-details/subd-details/subd-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/subd-details/subd-details.component.html
@@ -45,7 +45,7 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.subdSuitability"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
-    Does the proposal support agriculture in the short or long term? Please explain.
+    Does the proposal support agriculture in the short or long term?
     <app-updated-banner *ngIf="updatedFields.includes('subdAgricultureSupport')"></app-updated-banner>
   </div>
   <div class="grid-double">
