--- a/portal-frontend/src/app/features/applications/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/land-use/land-use.component.html
@@ -18,7 +18,7 @@
     <div class="form-row">
       <div class="full-row">
         <label for="parcelsAgricultureDescription">
-          Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
+          Describe all agriculture that currently takes place on the parcel(s).
         </label>
         <div class="subtext">You may describe multiple parcels collectively or individually.</div>
         <mat-form-field class="display-block" appearance="outline">
@@ -51,7 +51,7 @@
       <div class="full-row">
         <h6>
           <label for="parcelsAgricultureImprovementDescription">
-            Quantify and describe in detail all agricultural improvements made to the parcel(s).
+            Describe all agricultural improvements made to the parcel(s).
           </label>
         </h6>
         <div class="subtext">
@@ -85,11 +85,10 @@
       </div>
       <div class="full-row">
         <label for="parcelsNonAgricultureUseDescription">
-          Quantify and describe all non-agricultural uses that currently take place on the parcel(s).
+          Describe all other uses that currently take place on the parcel(s).
         </label>
         <div class="subtext">
-          Describe any non-agricultural uses such as home-based businesses, commercial, recreational, institutional,
-          industrial, etc. If all activity is agricultural, please specify "No non-agricultural activity".
+          Describe other uses such as residential, home-based businesses, commercial, recreational, institutional, industrial, etc.
         </div>
         <mat-form-field class="display-block" appearance="outline">
           <textarea
@@ -116,10 +115,9 @@
         <div class="subtext">Characters left: {{ 4000 - parcelsNonAgricultureUseDescriptionText.textLength }}</div>
       </div>
     </div>
-    <h5>Identify the land uses surrounding the parcel(s) under application.</h5>
+    <h5>Choose and describe neighbouring land uses.</h5>
     <div class="subtext">
-      Choose the Primary Land Use Type from the drop-down list. If there is more than one land use type, choose the main
-      land use and describe all the uses under Specific Activity.
+      Choose the main land use type from the drop-down and describe the specific activities.
     </div>
     <div class="form-row">
       <div class="full-row">
