--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/land-use/land-use.component.html
@@ -18,7 +18,7 @@
     <div class="form-row">
       <div class="full-row">
         <label for="parcelsAgricultureDescription">
-          Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
+          Describe all agriculture that currently takes place on the parcel(s).
         </label>
         <div class="subtext">You may describe multiple parcels collectively or individually.</div>
         <mat-form-field class="display-block" appearance="outline">
@@ -43,15 +43,15 @@
           <div *ngIf="parcelsAgricultureDescription.errors?.['required']">This field is required</div>
         </div>
         <mat-hint class="subtext"
-          >Example 1: PID 001-002-003: 60 ha hay crop, 40 ha grazing, 200 sheep. Example 2: Parcel 1: 10%
-          blueberry crop, 30% vegetables, 60% hay. Parcel 2: 100% hay.
+          >Example 1: PID 001-002-003: 60 ha hay crop, 40 ha grazing, 200 sheep. Example 2: Parcel 1: 10% blueberry
+          crop, 30% vegetables, 60% hay. Parcel 2: 100% hay.
         </mat-hint>
         <div class="subtext">Characters left: {{ 4000 - parcelsAgricultureDescriptionText.textLength }}</div>
       </div>
       <div class="full-row">
         <h6>
           <label for="parcelsAgricultureImprovementDescription">
-            Quantify and describe in detail all agricultural improvements made to the parcel(s).
+            Describe all agricultural improvements made to the parcel(s).
           </label>
         </h6>
         <div class="subtext">
@@ -85,11 +85,11 @@
       </div>
       <div class="full-row">
         <label for="parcelsNonAgricultureUseDescription">
-          Quantify and describe all non-agricultural uses that currently take place on the parcel(s).
+          Describe all other uses that currently take place on the parcel(s).
         </label>
         <div class="subtext">
-          Describe any non-agricultural uses such as home-based businesses, commercial, recreational, institutional,
-          industrial, etc. If all activity is agricultural, please specify "No non-agricultural activity".
+          Describe other uses such as residential, home-based businesses, commercial, recreational, institutional,
+          industrial, etc.
         </div>
         <mat-form-field class="display-block" appearance="outline">
           <textarea
@@ -112,7 +112,9 @@
           <mat-icon>warning</mat-icon>
           <div *ngIf="parcelsNonAgricultureUseDescription.errors?.['required']">This field is required</div>
         </div>
-        <mat-hint class="subtext">Example: House and 100 square metre detached auto repair shop.</mat-hint>
+        <mat-hint class="subtext"
+          >Example: 100m<sup>2</sup> house and 50m<sup>2</sup> detached auto repair shop</mat-hint
+        >
         <div class="subtext">Characters left: {{ 4000 - parcelsNonAgricultureUseDescriptionText.textLength }}</div>
       </div>
     </div>
