--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.html
@@ -107,7 +107,7 @@
       <h4>Land Use of Parcel(s) under Notice of Intent</h4>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
+      Describe all agriculture that currently takes place on the parcel(s).
       <app-updated-banner *ngIf="updatedFields.includes('parcelsAgricultureDescription')"></app-updated-banner>
     </div>
     <div class="grid-double">
@@ -115,7 +115,7 @@
       <app-no-data [showRequired]="showErrors" *ngIf="!noiSubmission.parcelsAgricultureDescription"></app-no-data>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe in detail all agricultural improvements made to the parcel(s).
+      Describe all agricultural improvements made to the parcel(s).
       <app-updated-banner
         *ngIf="updatedFields.includes('parcelsAgricultureImprovementDescription')"
       ></app-updated-banner>
@@ -128,7 +128,7 @@
       ></app-no-data>
     </div>
     <div class="subheading2 grid-1">
-      Quantify and describe all non-agricultural uses that currently take place on the parcel(s).
+      Describe all other uses that currently take place on the parcel(s).
       <app-updated-banner *ngIf="updatedFields.includes('parcelsNonAgricultureUseDescription')"></app-updated-banner>
     </div>
     <div class="grid-double">
