--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
@@ -110,8 +110,7 @@
   </div>
 
   <div class="subheading2 grid-1">
-    Do you need to import any fill to construct or conduct the proposed Non-farm use? Fill is any material brought onto
-    the property, including gravel for construction.
+    Do you need to import any fill to construct or conduct the proposed non-adhering residential use?
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.naruWillImportFill ? 'Yes' : 'No' }}
