--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/excl-proposal/excl-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/excl-proposal/excl-proposal.component.html
@@ -78,8 +78,8 @@
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
       <div class="subtext">
-        Be clear and concise in describing the proposal. Include why you are applying for exclusion and what the
-        proposal will achieve.
+        Include why you are applying for an exclusion, what the proposal will achieve, and any benefits to agriculture that
+        the proposal provides.
       </div>
       <mat-form-field appearance="outline">
         <textarea
