--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
@@ -40,6 +40,10 @@
     </div>
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
+      <div class="subtext">
+        Include why you are applying for non-farm use, what the proposal will achieve, and any benefits to agriculture
+        that the proposal provides.
+      </div>
       <mat-form-field appearance="outline">
         <textarea
           formControlName="purpose"
@@ -57,10 +61,8 @@
       <div class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</div>
     </div>
     <div class="full-row">
-      <label for="outside-lands">
-        Could this proposal be accommodated on lands outside of the ALR? Please justify why the proposal cannot be
-        carried out on lands outside the ALR.
-      </label>
+      <label for="outside-lands"> Could this proposal be accommodated on lands outside of the ALR? </label>
+      <div class="subtext">Please justify why the proposal cannot be carried out on lands outside the ALR.</div>
       <mat-form-field appearance="outline">
         <textarea
           formControlName="outsideLands"
@@ -78,9 +80,8 @@
       <div class="subtext">Characters left: {{ 4000 - outsideLandsText.textLength }}</div>
     </div>
     <div class="full-row">
-      <label for="agriculture-support">
-        Does the proposal support agriculture in the short or long term? Please explain.
-      </label>
+      <label for="agriculture-support"> Does the proposal support agriculture in the short or long term? </label>
+      <div class="subtext">Please explain</div>
       <mat-form-field appearance="outline">
         <textarea
           formControlName="agricultureSupport"
@@ -115,9 +116,9 @@
     </div>
     <div class="full-row">
       <label for="will-import-fill">
-        Do you need to import any fill to construct or conduct the proposed Non-farm use? Fill is any material brought
-        onto the property, including gravel for construction.
+        Do you need to import any fill to construct or conduct the proposed Non-farm use?
       </label>
+      <div class="subtext">Fill is any material brought onto the property, including gravel for construction.</div>
       <mat-button-toggle-group
         (change)="onChangeFill($event.value)"
         class="input"
@@ -205,6 +206,7 @@
     <div class="form-row">
       <div>
         <label for="projectDurationUnit">Duration</label>
+        <div class="subtext">Days, Months, or Years</div>
         <mat-form-field appearance="outline">
           <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
             <mat-option value="days">Days</mat-option>
@@ -222,6 +224,9 @@
       </div>
       <div>
         <label for="projectDurationAmount">Length</label>
+        <div class='subtext'>
+          Decimals can be used - e.g. 3.5 months or 1.5 years
+        </div>
         <mat-form-field appearance="outline">
           <input
             id="projectDurationAmount"
@@ -231,7 +236,7 @@
             min="0.01"
             matInput
             formControlName="projectDurationAmount"
-            placeholder="Type length as a decimal number"
+            placeholder="Type length"
           />
         </mat-form-field>
         <div
