--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/pofo-proposal/pofo-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/pofo-proposal/pofo-proposal.component.html
@@ -69,7 +69,7 @@
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
       <div class="subtext">
-        Include why you are applying for removal of soil, what the proposal will achieve, and any benefits to
+        Include why you are applying for placement of fill, what the proposal will achieve, and any benefits to
         agriculture that the proposal provides.
       </div>
       <mat-form-field appearance="outline">
@@ -120,6 +120,7 @@
       <div class="form-row">
         <div>
           <label for="projectDurationUnit">Duration</label>
+          <div class="subtext">Days, Months, or Years</div>
           <mat-form-field appearance="outline">
             <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
               <mat-option value="days">Days</mat-option>
@@ -137,6 +138,9 @@
         </div>
         <div>
           <label for="projectDurationAmount">Length</label>
+          <div class='subtext'>
+            Decimals can be used - e.g. 3.5 months or 1.5 years
+          </div>
           <mat-form-field appearance="outline">
             <input
               id="projectDurationAmount"
@@ -146,7 +150,7 @@
               min="0.01"
               matInput
               formControlName="projectDurationAmount"
-              placeholder="Type length as a decimal number"
+              placeholder="Type length"
             />
           </mat-form-field>
           <div
