--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/roso-proposal/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/roso-proposal/roso-proposal.component.html
@@ -122,6 +122,7 @@
       <div class="form-row">
         <div>
           <label for="projectDurationUnit">Duration</label>
+          <div class="subtext">Days, Months, or Years</div>
           <mat-form-field appearance="outline">
             <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
               <mat-option value="days">Days</mat-option>
@@ -139,6 +140,7 @@
         </div>
         <div>
           <label for="projectDurationAmount">Length</label>
+          <div class="subtext">Decimals can be used - e.g. 3.5 months or 1.5 years</div>
           <mat-form-field appearance="outline">
             <input
               id="projectDurationAmount"
@@ -148,7 +150,7 @@
               min="0.01"
               matInput
               formControlName="projectDurationAmount"
-              placeholder="Type length as a decimal number"
+              placeholder="Type length"
             />
           </mat-form-field>
           <div
