--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -33,6 +33,10 @@
   <div class="form-row">
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
+      <div class="subtext">
+        Include why you are applying for a Transportation, Utility and Recreational Trail, what the proposal will achieve, and any benefits to
+        agriculture that the proposal provides.
+      </div>
       <mat-form-field appearance="outline">
         <textarea
           formControlName="purpose"
@@ -98,6 +102,9 @@
     </div>
     <div class="full-row">
       <label for="negative-impact">Could this proposal be accommodated on lands outside of the ALR?</label>
+      <div class="subtext">
+        Please justify why the proposal cannot be carried out on lands outside the ALR.
+      </div>
       <mat-form-field appearance="outline">
         <textarea
           [formControl]="outsideLands"
