--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/pfrs/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/pfrs/pfrs-proposal.component.html
@@ -70,8 +70,8 @@
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
       <div class="subtext">
-        Include why you are applying for placement of fill, what the proposal will achieve, and any benefits to
-        agriculture that the proposal provides.
+        Include why you are applying for placement of fill and removal of soil, what the proposal will achieve, and any
+        benefits to agriculture that the proposal provides.
       </div>
       <mat-form-field appearance="outline">
         <textarea
@@ -211,6 +211,7 @@
       <div class="form-row">
         <div>
           <label for="projectDurationUnit">Duration</label>
+          <div class="subtext">Days, Months, or Years</div>
           <mat-form-field appearance="outline">
             <mat-select placeholder="Select one" id="projectDurationUnit" [formControl]="projectDurationUnit">
               <mat-option value="days">Days</mat-option>
@@ -228,6 +229,7 @@
         </div>
         <div>
           <label for="projectDurationAmount">Length</label>
+          <div class="subtext">Decimals can be used - e.g. 3.5 months or 1.5 years</div>
           <mat-form-field appearance="outline">
             <input
               id="projectDurationAmount"
@@ -237,7 +239,7 @@
               min="0.01"
               matInput
               [formControl]="projectDurationAmount"
-              placeholder="Type length as a decimal number"
+              placeholder="Type length"
             />
           </mat-form-field>
           <div
