Only set ALC Response Sent status if Noti Email Sends
* Add tests for it
* Update email service to return true/false
* Minor UI fix to Inbox

--- a/portal-frontend/src/app/features/home/home.component.scss
+++ b/portal-frontend/src/app/features/home/home.component.scss
@@ -7,6 +7,14 @@
   }
 }
 
+:host::ng-deep {
+  .no-data {
+    color: colors.$grey;
+    text-align: center;
+    padding: rem(8);
+  }
+}
+
 .header-row {
   .learn-more-wrapper {
     margin-top: rem(24);
