--- a/portal-frontend/src/app/features/home/noi-list/noi-list.component.html
+++ b/portal-frontend/src/app/features/home/noi-list/noi-list.component.html
@@ -6,7 +6,7 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" style='text-align: center' colspan="7">No NOIs Created</td>
+        <td class="no-data" colspan="7">No NOIs Created</td>
       </tr>
 
       <ng-container matColumnDef="fileNumber">
