--- a/alcs-frontend/src/app/features/search/notification-search-table/notification-search-table.component.html
+++ b/alcs-frontend/src/app/features/search/notification-search-table/notification-search-table.component.html
@@ -23,7 +23,7 @@
     </ng-container>
 
     <ng-container matColumnDef="ownerName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Owner Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Transferee Name</th>
       <td mat-cell *matCellDef="let element">
         {{ element.ownerName | emptyColumn }}
       </td>
