--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -55,6 +55,13 @@ a {
   align-items: center;
 }
 
+.left {
+  display: flex;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .no-padding .mat-dialog-container {
   padding: 0;
 }
