--- a/portal-frontend/src/app/features/public/search/file-type-filter-drop-down/file-type-filter-drop-down.component.scss
+++ b/portal-frontend/src/app/features/public/search/file-type-filter-drop-down/file-type-filter-drop-down.component.scss
@@ -1,7 +1,9 @@
+@use '../../../../../styles/functions' as *;
+
 .file-type-input {
   width: 100%;
 }
 
 .tall-autocomplete {
-  max-height: 600px !important;
+  max-height: rem(600) !important;
 }
